elossasset workflow to riskconvolutionasset