@@ -5,15 +5,21 @@ import java.util.stream.Collectors;
 
 import scratch.anne.risk_system_vb.portfolio.assets.AbstractAsset;
 import scratch.anne.risk_system_vb.util.Metadata;
+import scratch.anne.risk_system_vb.util.PortfolioGroupingUtils;
 import scratch.anne.risk_system_vb.util.AssetKeys.SiteKey;
 
 /**
  * Immutable canonical portfolio.
  *
- * Holds assets and intrinsic deterministic groupings derived
- * solely from those assets.
+ * <p>
+ * Holds assets and deterministic structural groupings derived solely from
+ * asset data. This class MUST remain free of execution, hazard, or risk logic.
+ * </p>
  *
- * Execution-specific structures belong in PortfolioView.
+ * <p>
+ * All ordering is defined by original asset list iteration order and frozen
+ * at construction time.
+ * </p>
  */
 public class Portfolio<T extends AbstractAsset> implements PortfolioGetters<T> {
 
@@ -24,12 +30,13 @@ public class Portfolio<T extends AbstractAsset> implements PortfolioGetters<T> {
     private final List<T> assets;
     private final Map<String, T> assetMap;
 
-    /** Grouping by site (lat, lon, vs30) */
+    /** Site grouping (lat, lon, vs30) */
     private final Map<SiteKey, List<T>> siteMap;
 
-    /** Grouping by additional field name → value → assets */
+    /** Additional field grouping: field → value → assets */
     private final Map<String, Map<String, List<T>>> additionalFieldGroups;
 
+    /** Ordered list of additional field names (derived deterministically) */
     private final List<String> additionalFieldNames;
 
     // ------------------------------------------------------------------------
@@ -46,120 +53,95 @@ public class Portfolio<T extends AbstractAsset> implements PortfolioGetters<T> {
                      List<String> additionalFieldNames,
                      Metadata metadata) {
 
-        if (assets == null || assets.isEmpty())
+        if (assets == null || assets.isEmpty()) {
             throw new IllegalArgumentException("Assets must be non-null and non-empty");
+        }
 
         validateHomogeneous(assets);
 
-        this.assets = Collections.unmodifiableList(new ArrayList<>(assets));
-        
+        // -------------------------
+        // Core immutable storage
+        // -------------------------
+        this.assets = List.copyOf(assets);
+
         this.assetMap = assets.stream()
                 .collect(Collectors.toUnmodifiableMap(
-                    T::getAssetID, // assumes AbstractAsset has getID()
-                    a -> a
+                        T::getAssetID,
+                        a -> a
                 ));
 
         this.metadata = (metadata == null)
-                ? new Metadata.Builder().build()   // empty/default metadata
+                ? new Metadata.Builder().build()
                 : metadata;
 
-        this.additionalFieldNames = additionalFieldNames != null
-                ? Collections.unmodifiableList(new ArrayList<>(additionalFieldNames))
-                : Collections.emptyList();
+        // -------------------------
+        // Site grouping (stable order)
+        // -------------------------
+        this.siteMap = PortfolioGroupingUtils.groupBy(
+                assets,
+                a -> new SiteKey(a.getLatitude(), a.getLongitude(), a.getVs30())
+        );
 
-        // ---- intrinsic derived structures ----
-        this.siteMap = Collections.unmodifiableMap(buildSiteMap(this.assets));
+        // -------------------------
+        // Additional field grouping (deterministic inversion)
+        // -------------------------
         this.additionalFieldGroups =
-                Collections.unmodifiableMap(buildAdditionalFieldGroups(this.assets));
+                PortfolioGroupingUtils.invertNestedFields(
+                        assets,
+                        AbstractAsset::getAdditionalFields
+                );
+
+        // -------------------------
+        // Field name ordering (derived from actual data)
+        // -------------------------
+        this.additionalFieldNames =
+                List.copyOf(additionalFieldGroups.keySet());
     }
-    
-    
-    // ---- constructor without metadata ---- 
-    public Portfolio(List<T> assets,
-            List<String> additionalFieldNames) {
-			this(assets, additionalFieldNames, null);
-			}
-    
-    // ---- constructor without additional field names ----
-    public Portfolio(List<T> assets,
-            Metadata metadata) {
-			this(assets, null, metadata);
-			}
-    
-    // ---- constructor for assets only ---- 
+
+    // ------------------------------------------------------------------------
+    // Convenience constructors
+    // ------------------------------------------------------------------------
+
+    public Portfolio(List<T> assets, List<String> additionalFieldNames) {
+        this(assets, additionalFieldNames, null);
+    }
+
+    public Portfolio(List<T> assets, Metadata metadata) {
+        this(assets, null, metadata);
+    }
+
     public Portfolio(List<T> assets) {
-	        this(assets, null, null);
-	    	}
-
-
-    // ------------------------------------------------------------------------
-    // Internal builders
-    // ------------------------------------------------------------------------
-
-    private Map<SiteKey, List<T>> buildSiteMap(List<T> assets) {
-
-        Map<SiteKey, List<T>> map = new HashMap<>();
-
-        for (T asset : assets) {
-
-            SiteKey key = new SiteKey(
-                    asset.getLatitude(),
-                    asset.getLongitude(),
-                    asset.getVs30()
-            );
-
-            map.computeIfAbsent(key, k -> new ArrayList<>()).add(asset);
-        }
-
-        map.replaceAll((k,v) -> Collections.unmodifiableList(v));
-        return map;
+        this(assets, null, null);
     }
 
-    private Map<String, Map<String, List<T>>> buildAdditionalFieldGroups(List<T> assets) {
-
-        Map<String, Map<String, List<T>>> result = new HashMap<>();
-
-        for (T asset : assets) {
-
-            for (Map.Entry<String,String> entry :
-                    asset.getAdditionalFields().entrySet()) {
-
-                String field = entry.getKey();
-                String value = entry.getValue();
-
-                result
-                    .computeIfAbsent(field, f -> new HashMap<>())
-                    .computeIfAbsent(value, v -> new ArrayList<>())
-                    .add(asset);
-            }
-        }
-
-        // deep immutability
-        result.replaceAll((field, valueMap) -> {
-            valueMap.replaceAll((v,list) -> Collections.unmodifiableList(list));
-            return Collections.unmodifiableMap(valueMap);
-        });
-
-        return result;
-    }
+    // ------------------------------------------------------------------------
+    // Validation
+    // ------------------------------------------------------------------------
 
     private void validateHomogeneous(List<T> assets) {
         Class<?> clazz = assets.get(0).getClass();
         for (T asset : assets) {
             if (!asset.getClass().equals(clazz)) {
                 throw new IllegalArgumentException(
-                        "Portfolio must contain homogeneous asset types");
+                        "Portfolio must contain homogeneous asset types"
+                );
             }
         }
     }
 
+    // ------------------------------------------------------------------------
+    // Core getters
+    // ------------------------------------------------------------------------
 
- // -------------------- Core getters --------------------
     @Override
-    public List<T> getAssets() { return assets; }
+    public List<T> getAssets() {
+        return assets;
+    }
 
     @Override
-    public Set<String> getAssetIDs() { return assetMap.keySet(); }
+    public Set<String> getAssetIDs() {
+        return assetMap.keySet();
+    }
 
     @Override
     public T getAssetByID(String assetID) {
@@ -169,58 +151,76 @@ public class Portfolio<T extends AbstractAsset> implements PortfolioGetters<T> {
         }
         return asset;
     }
-    
+
     @Override
     public Set<String> getResponseModelNames() {
         return assets.stream()
-                     .map(AbstractAsset::getModelName)
-                     .collect(Collectors.toCollection(LinkedHashSet::new));
+                .map(AbstractAsset::getModelName)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
     @Override
-    public int size() { return assets.size(); }
+    public int size() {
+        return assets.size();
+    }
 
     @Override
-    public Metadata getMetadata() { return metadata; }
+    public Metadata getMetadata() {
+        return metadata;
+    }
 
-    // -------------------- Site grouping --------------------
+    // ------------------------------------------------------------------------
+    // Site grouping
+    // ------------------------------------------------------------------------
+
     @Override
-    /** Returns the full site → assets map (immutable) */
     public Map<SiteKey, List<T>> getSiteMap() {
         return siteMap;
     }
-    
+
     @Override
-    public Set<SiteKey> getSiteKeys() { return siteMap.keySet(); }
+    public Set<SiteKey> getSiteKeys() {
+        return siteMap.keySet();
+    }
 
     @Override
     public List<T> getAssetsBySite(SiteKey key) {
-        return siteMap.getOrDefault(key, Collections.emptyList());
+        return siteMap.getOrDefault(key, List.of());
     }
 
-    // -------------------- Additional fields --------------------
+    // ------------------------------------------------------------------------
+    // Additional field access
+    // ------------------------------------------------------------------------
+
     @Override
-    /** Returns all unique values for a given additional field */
-    public Set<String> getAdditionalFieldValues(String field) {
-        Map<String, List<T>> valueMap = additionalFieldGroups.get(field);
-        return valueMap == null ? Collections.emptySet() : valueMap.keySet();
+    public List<String> getAdditionalFieldNames() {
+        return additionalFieldNames;
     }
-    
+
     @Override
-    public List<String> getAdditionalFieldNames() { return additionalFieldNames; }
+    public List<String> getAdditionalFieldValues(String field) {
+        Map<String, List<T>> valueMap = additionalFieldGroups.get(field);
+        return valueMap == null
+                ? List.of()
+                : List.copyOf(valueMap.keySet());
+    }
 
     @Override
     public List<T> getAssetsByAdditionalField(String field, String value) {
         Map<String, List<T>> valueMap = additionalFieldGroups.get(field);
-        if (valueMap == null) return Collections.emptyList();
-        return valueMap.getOrDefault(value, Collections.emptyList());
+        if (valueMap == null) return List.of();
+        return valueMap.getOrDefault(value, List.of());
     }
-    
+
     @Override
     public Map<String, List<T>> getAdditionalFieldMap(String fieldName) {
         Map<String, List<T>> map = additionalFieldGroups.get(fieldName);
-        return map != null ? Collections.unmodifiableMap(map) : Map.of();
+        return map != null ? map : Map.of();
     }
+
+    // ------------------------------------------------------------------------
+    // Debug
+    // ------------------------------------------------------------------------
 
     @Override
     public String toString() {
